--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
             </activation>
             <properties>
                 <skip.integration.tests>true</skip.integration.tests>
-                <skip.unit.tests>true</skip.unit.tests>
+                <skip.unit.tests>false</skip.unit.tests>
             </properties>
         </profile>
         <profile>
@@ -87,8 +87,18 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M1</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-junit4</artifactId>
+                        <version>3.0.0-M1</version>
+                    </dependency>
+                </dependencies>
                 <configuration>
                     <skipTests>${skip.unit.tests}</skipTests>
+                    <includes>
+                        <include>**/*Unit*.java</include>
+                    </includes>
                 </configuration>
             </plugin>
             <plugin>
@@ -111,10 +121,9 @@
                         </goals>
                         <configuration>
                             <includes>
-                                <include>**/*.java</include>
+                                <include>**/*Integration*.java</include>
                             </includes>
                             <skipTests>${skip.integration.tests}</skipTests>
-                            <groups>es.eduardodediegolucas.rest.categories.IntegrationTest</groups>
                         </configuration>
                     </execution>
                 </executions>
